--- a/src/main/resources/Views/QuizUI.fxml
+++ b/src/main/resources/Views/QuizUI.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleButton?>
@@ -53,6 +54,9 @@
             <image>
                 <Image url="@../images/Dictionary-14.png" />
             </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
         </ImageView>
     </children>
 </AnchorPane>
