--- a/src/main/resources/Views/Translate.fxml
+++ b/src/main/resources/Views/Translate.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dictionary.DictionaryController.TranslateController">
    <children>
@@ -36,44 +35,29 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </ImageView>
-      <Rectangle fx:id="transContainer" arcHeight="5.0" arcWidth="5.0" fill="#1a475b" height="33.0" layoutX="317.0" layoutY="467.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-fx-arc-width: 30; -fx-arc-height: 35;" visible="false" width="107.0" />
-      <JFXButton fx:id="translateButton" buttonType="RAISED" layoutX="317.0" layoutY="466.0" onMouseClicked="#translateText" prefHeight="34.0" prefWidth="107.0" text="Translate" textFill="WHITE" visible="false">
+      <Rectangle fx:id="transContainer" arcHeight="5.0" arcWidth="5.0" fill="#1a475b" height="33.0" layoutX="317.0" layoutY="467.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-fx-arc-width: 30; -fx-arc-height: 35;" width="107.0" />
+      <JFXButton fx:id="translateButton" buttonType="RAISED" layoutX="317.0" layoutY="466.0" onMouseClicked="#translateText" prefHeight="34.0" prefWidth="107.0" text="Translate" textFill="WHITE">
          <font>
-            <Font name="Poppins SemiBold" size="14.0" />
+            <Font name="Poppins Regular" size="14.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></JFXButton>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a475b" height="63.0" layoutX="-1.0" layoutY="-1.0" stroke="BLACK" strokeType="INSIDE" width="900.0" />
-      <JFXButton fx:id="VoiceRight" layoutX="456.0" layoutY="468.0" onMouseClicked="#PlayVoiceT" prefHeight="25.0" prefWidth="0.0">
-         <graphic>
-            <ImageView fitHeight="14.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/voiceButton.png" />
-               </image>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-         </graphic>
-      </JFXButton>
-      <JFXButton />
-      <JFXButton fx:id="VoiceLeft" layoutX="35.0" layoutY="466.0" onMouseClicked="#PlayVoiceS" prefHeight="34.0" prefWidth="28.0">
-         <graphic>
-            <ImageView fitHeight="14.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/voiceButton.png" />
-               </image>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-         </graphic>
-      </JFXButton>
-      <Text layoutX="358.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Translate Text">
-         <font>
-            <Font name="Poppins Bold" size="25.0" />
-         </font>
-      </Text>
+      <ImageView fitHeight="80.0" fitWidth="264.0" layoutX="349.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/TranslateText.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="VoiceRight" fitHeight="14.0" fitWidth="35.0" layoutX="457.0" layoutY="476.0" onMouseClicked="#PlayVoiceT" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/voiceButton.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="VoiceLeft" fitHeight="14.0" fitWidth="35.0" layoutX="35.0" layoutY="476.0" onMouseClicked="#PlayVoiceS" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/voiceButton.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
