--- a/src/main/resources/Views/addWord.fxml
+++ b/src/main/resources/Views/addWord.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -22,7 +22,7 @@
       <TextField fx:id="newSynonym" layoutX="505.0" layoutY="286.0" prefHeight="27.0" prefWidth="318.0" styleClass="meaning" stylesheets="@test.css" />
       <TextField fx:id="newDefinition" alignment="TOP_LEFT" layoutX="77.0" layoutY="369.0" prefHeight="58.0" prefWidth="750.0" styleClass="meaning" stylesheets="@test.css" />
       <TextField fx:id="newExample" alignment="TOP_LEFT" layoutX="77.0" layoutY="467.0" prefHeight="58.0" prefWidth="750.0" styleClass="meaning" stylesheets="@test.css" />
-      <Text fill="WHITE" layoutX="80.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Word" textAlignment="CENTER" wrappingWidth="48.509952545166016">
+      <Text fill="WHITE" layoutX="83.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Word*" textAlignment="CENTER" wrappingWidth="48.509952545166016">
          <font>
             <Font name="Poppins Regular" size="14.0" />
          </font>
@@ -32,7 +32,7 @@
             <Font name="Poppins Regular" size="14.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="80.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Definition" textAlignment="CENTER" wrappingWidth="78.90991592407227">
+      <Text fill="WHITE" layoutX="81.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Meaning*" textAlignment="CENTER" wrappingWidth="78.90991592407227">
          <font>
             <Font name="Poppins Regular" size="14.0" />
          </font>
@@ -62,13 +62,13 @@
             <Font name="Poppins Regular" size="14.0" />
          </font>
       </Text>
-      <Button fx:id="addButton" layoutX="381.0" layoutY="550.0" mnemonicParsing="false" onMouseClicked="#addWord" prefHeight="36.0" prefWidth="142.0" style="-fx-background-radius: 15; -fx-background-color: #1a475b;" text="Add" textFill="WHITE">
+      <JFXButton fx:id="addButton" buttonType="RAISED" layoutX="389.0" layoutY="544.0" onMouseClicked="#addWord" prefHeight="35.0" prefWidth="142.0" style="-fx-background-color: #1a475b; -fx-border-radius: 20; -fx-background-radius: 20;" text="Add" textFill="WHITE">
          <font>
-            <Font name="Poppins Bold" size="12.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
-      </Button>
+      </JFXButton>
    </children>
 </AnchorPane>
