--- a/src/main/resources/Views/test.css
+++ b/src/main/resources/Views/test.css
@@ -74,6 +74,10 @@
     -fx-pref-height: 30px;
 }
 
+.combo-box-popup .list-cell:hover {
+    -fx-background-color: #527B8E;
+}
+
 /* Adjust the height of the combo box list view */
 .combo-box-popup .list-view {
     -fx-pref-height: 90px; /* This should be 3 times the height of list-cell */
