--- a/src/main/resources/Views/Recents.fxml
+++ b/src/main/resources/Views/Recents.fxml
@@ -32,7 +32,10 @@
             <Font name="Poppins Regular" size="16.0" />
          </font>
       </Text>
-      <TextField fx:id="searchbar" layoutX="72.0" layoutY="315.0" prefHeight="35.0" prefWidth="174.0" stylesheets="@test.css" />
+      <TextField fx:id="searchbar" layoutX="72.0" layoutY="315.0" prefHeight="35.0" prefWidth="174.0" stylesheets="@test.css">
+         <font>
+            <Font size="14.0" />
+         </font></TextField>
       <ListView fx:id="searchedList" layoutX="430.0" layoutY="198.0" prefHeight="329.0" prefWidth="374.0" styleClass="list-word" stylesheets="@test.css" />
    </children>
 </AnchorPane>
